fix: organizing app

--- a/web/spa/src/app/components/config-editor/config-editor.component.html
+++ b/web/spa/src/app/components/config-editor/config-editor.component.html
@@ -44,3 +44,6 @@
     </div>
   </div>
 </div>
+<div class="columns is-full">
+  <button (click)="saveConfig()" class="button is-warning is-fullwidth">Save</button>
+</div>
