--- a/web/spa/src/styles.scss
+++ b/web/spa/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@media screen and (min-width: 500px) {
+    .tile:not(.is-child) {
+        display: inline-block !important;
+        width: 48%;
+        margin-left: 8px;
+    }
+}
+@media screen and (min-width: 800px) {
+    .tile:not(.is-child) {
+        display: inline-block !important;
+        width: 31%;
+        margin-left: 8px;
+    }
+}
